add access to services/status in RBAC rules

--- a/releases/v0.1.4.yml
+++ b/releases/v0.1.4.yml
@@ -94,6 +94,15 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - services/status
+  verbs:
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - serviceaccounts
   verbs:
   - create
