--- a/do/csi/cmd/do-csi-plugin/Dockerfile
+++ b/do/csi/cmd/do-csi-plugin/Dockerfile
@@ -12,9 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM alpine:3.6
+FROM alpine:3.7
 
-RUN apk add --no-cache ca-certificates
+RUN apk add --no-cache ca-certificates e2fsprogs
 
 ADD do-csi-plugin /bin/
 
