--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,4 +1,3 @@
-
 # Gopkg.toml example
 #
 # Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
@@ -26,6 +25,14 @@
   #revision = "master"
   revision = "edc3ab29cdff8694dd6feb85cfeb4b5f1b38ed9c"
 
+[[override]]
+  name = "k8s.io/apiextensions-apiserver"
+  version = "kubernetes-1.8.2"
+
+[[override]]
+  name = "k8s.io/client-go"
+  version = "kubernetes-1.8.2"
+
 [[constraint]]
   branch = "master"
   name = "github.com/digitalocean/godo"
@@ -52,14 +59,6 @@
 
 [[constraint]]
   name = "k8s.io/apiserver"
-  version = "kubernetes-1.8.2"
-
-[[constraint]]
-  name = "k8s.io/apiextensions-apiserver"
-  version = "kubernetes-1.8.2"
-
-[[constraint]]
-  name = "k8s.io/client-go"
   version = "kubernetes-1.8.2"
 
 [[constraint]]
