--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ go:
 dist: trusty
 
 script:
-  - go get github.com/golang/lint/golint
+  - go get golang.org/x/lint/golint
   - make ci
 
 branches:
