Use UUID for certificate ID example.
The existing identifier can be misunderstood to reference a certificate
name which won't work.

--- a/docs/controllers/services/examples/http-nginx-with-redirect.yml
+++ b/docs/controllers/services/examples/http-nginx-with-redirect.yml
@@ -7,7 +7,7 @@ metadata:
     service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
     service.beta.kubernetes.io/do-loadbalancer-algorithm: "round_robin"
     service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
-    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "certificate-abc-123"
+    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "29333fdc-733d-4523-8d79-31acc1544ee0"
     service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
 spec:
   type: LoadBalancer
