--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -43,8 +43,8 @@
   revision = "f2b4162afba35581b6d4a50d3b8f34e33c144682"
 
 [[constraint]]
-  version = "v1.7.5"
   name = "github.com/digitalocean/godo"
+  version = "1.9.0"
 
 [[constraint]]
   branch = "master"
