Adjust to upstream changes
- Update package imports.
- Implement new interface function around load balancer naming (without
  modifying the naming schema).
- Use cobra command-based bootstrapping method to ensure all flags are
  set properly. (This will require enabling the allow-untagged-cloud
  flag on the CLI.)
- Update end-to-end tests.
- Follow upstream in switching from glog to klog.

--- a/docs/example-manifests/cloud-controller-manager.yml
+++ b/docs/example-manifests/cloud-controller-manager.yml
@@ -53,6 +53,7 @@ spec:
           - "/bin/digitalocean-cloud-controller-manager"
           - "--cloud-provider=digitalocean"
           - "--leader-elect=true"
+          - "--allow-untagged-cloud=true"
         resources:
           requests:
             cpu: 100m
