--- a/docs/controllers/services/examples/https-with-cert-nginx-minimal.yml
+++ b/docs/controllers/services/examples/https-with-cert-nginx-minimal.yml
@@ -5,7 +5,7 @@ metadata:
   name: https-with-cert-minimal
   annotations:
     # No TLS port annotation needed since 443 is assumed for HTTPS when another TLS option annotation is given.
-    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "certificate-abc-123"
+    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "c019bbf4-cad2-4884-8a20-410ddad7f54a"
 spec:
   type: LoadBalancer
   selector:
