Improve documentation and examples around HTTPS, HTTP/2, and TLS usage
- Move all TLS port-related semantics to the TLS port section.
- Move notes around TLS ports and protocols from the health check path
  section to the correct ones.
- Mention HTTP/2 in the TLS port section.
- Use name "http2" for example ports that use HTTP/2.

--- a/docs/controllers/services/examples/http2-with-cert-nginx.yml
+++ b/docs/controllers/services/examples/http2-with-cert-nginx.yml
@@ -11,7 +11,7 @@ spec:
   selector:
     app: nginx-example
   ports:
-    - name: https
+    - name: http2
       protocol: TCP
       port: 443
       targetPort: 80
