--- a/docs/controllers/services/examples/http2-with-pass-through-nginx.yml
+++ b/docs/controllers/services/examples/http2-with-pass-through-nginx.yml
@@ -16,7 +16,7 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 80
-    - name: https
+    - name: http2
       protocol: TCP
       port: 443
       targetPort: 443
