Support custom annotation to specify HTTP2 ports
The new annotation enables to run all protocols concurrently by allowing
to specify HTTP* ports independently while maintaining backwards
compatibility with the existing logic. In particular, port 443 continues
to default to HTTPS unless it is explicitly bound to HTTPS.

We also add a guard preventing conflicting port sharing across both the
HTTPS and HTTP2 protocols.

--- a/docs/controllers/services/examples/http2-with-pass-through-nginx.yml
+++ b/docs/controllers/services/examples/http2-with-pass-through-nginx.yml
@@ -2,10 +2,11 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: https-with-tls-pass-through
+  name: http2-with-tls-pass-through
   annotations:
-    service.beta.kubernetes.io/do-loadbalancer-protocol: "http2"
-    service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
+    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
+    # HTTP2 port annotation for 443 needed since it defaults to HTTPS.
+    service.beta.kubernetes.io/do-loadbalancer-http2-ports: "443"
     service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: "true"
 spec:
   type: LoadBalancer
