Support custom annotation to specify HTTP2 ports (#255)
The new annotation enables to run all protocols concurrently by allowing
to specify HTTP* ports independently while maintaining backwards
compatibility with the existing logic. In particular, port 443 continues
to default to HTTPS unless it is explicitly bound to HTTPS.

We also add a guard preventing conflicting port sharing across both the
HTTPS and HTTP2 protocols.

--- a/docs/controllers/services/examples/http2-with-cert-nginx.yml
+++ b/docs/controllers/services/examples/http2-with-cert-nginx.yml
@@ -2,10 +2,10 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: https-with-cert-minimal
+  name: http2-with-cert-minimal
   annotations:
-    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "c019bbf4-cad2-4884-8a20-410ddad7f54a"
     service.beta.kubernetes.io/do-loadbalancer-protocol: "http2"
+    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "c019bbf4-cad2-4884-8a20-410ddad7f54a"
 spec:
   type: LoadBalancer
   selector:
