Return error based on built secure forwarding rules on port 443
It turned out that redirection only works on port 443, which is why we
need to be more specific.

Additionally, we should not base our decision on the ports specified in
the annotations because (a) we always add the default secure 443 port to
the list of secure ports we check for emptiness if pass-through or a
certificate are requested; and (b) it is the actually built forwarding
rule that determines if HTTP-to-HTTPx redirection can apply, not the
intention expressed through the annotations. For instance, a user could
specify port 443 in the HTTPS ports annotation quite explicitly but
still miss to have a service on port 443 defined, which the previous
implementation would not mark as an error.

Hence, we loop over the built forwarding rules and check that there is
at least one secure entry protocol defined on port 443. As a minor
benefit, this allows us to invoke getRedirectHTTPToHTTPS a single time
only.

--- a/docs/controllers/services/examples/http2-with-cert-nginx.yml
+++ b/docs/controllers/services/examples/http2-with-cert-nginx.yml
@@ -2,15 +2,21 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: http2-with-cert-minimal
+  name: http2-with-cert
   annotations:
-    service.beta.kubernetes.io/do-loadbalancer-protocol: "http2"
-    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "c019bbf4-cad2-4884-8a20-410ddad7f54a"
+    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
+    service.beta.kubernetes.io/do-loadbalancer-http2-ports: "443"
+    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "abd8a259-1631-4e8f-8366-b170408ee33f"
+    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
 spec:
   type: LoadBalancer
   selector:
-    app: nginx-example
+    app: nginx-example2
   ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 80
     - name: http2
       protocol: TCP
       port: 443
@@ -20,13 +26,13 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: nginx-example
+  name: nginx-example2
 spec:
   replicas: 2
   template:
     metadata:
       labels:
-        app: nginx-example
+        app: nginx-example2
     spec:
       containers:
       - name: nginx
