--- a/docs/controllers/services/examples/http2-with-pass-through-nginx.yml
+++ b/docs/controllers/services/examples/http2-with-pass-through-nginx.yml
@@ -23,12 +23,15 @@ spec:
       targetPort: 443
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-example
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      app: nginx-example
   template:
     metadata:
       labels:
