Updated manifests from extensions/v1beta1 to apps/v1

--- a/docs/controllers/services/examples/http2-with-pass-through-nginx.yml
+++ b/docs/controllers/services/examples/http2-with-pass-through-nginx.yml
@@ -23,7 +23,7 @@ spec:
       targetPort: 443
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-example
