--- a/docs/controllers/services/examples/http-nginx-with-healthcheck-numeric-values.yml
+++ b/docs/controllers/services/examples/http-nginx-with-healthcheck-numeric-values.yml
@@ -19,7 +19,7 @@ spec:
       targetPort: 80
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-example
