--- a/docs/controllers/services/examples/tcp-nginx.yml
+++ b/docs/controllers/services/examples/tcp-nginx.yml
@@ -14,7 +14,7 @@ spec:
       targetPort: 80
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-example
