--- a/releases/v0.1.10.yml
+++ b/releases/v0.1.10.yml
@@ -1,7 +1,7 @@
 # NOTE: this release is compatible with Kubernetes versions v1.9 - v1.12
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: digitalocean-cloud-controller-manager
