Updated manifests from extensions/v1beta1 to apps/v1 and added matchLabels for selector

--- a/docs/controllers/services/examples/http-nginx-with-proxy-protocol.yml
+++ b/docs/controllers/services/examples/http-nginx-with-proxy-protocol.yml
@@ -8,7 +8,8 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: nginx-example
+    matchLabels:
+      app: nginx-example
   ports:
     - name: http
       protocol: TCP
