--- a/docs/controllers/services/examples/https-with-cert-nginx-minimal.yml
+++ b/docs/controllers/services/examples/https-with-cert-nginx-minimal.yml
@@ -9,7 +9,8 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: nginx-example
+    matchLabels:
+      app: nginx-example
   ports:
     - name: https
       protocol: TCP
