--- a/docs/controllers/services/examples/http-nginx-with-redirect.yml
+++ b/docs/controllers/services/examples/http-nginx-with-redirect.yml
@@ -12,7 +12,8 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: nginx-example
+    matchLabels:
+      app: nginx-example
   ports:
     - name: http
       protocol: TCP
@@ -30,7 +31,7 @@ metadata:
   name: nginx-example
 spec:
   replicas: 2
-  template:
+  template:F
     metadata:
       labels:
         app: nginx-example
