--- a/docs/controllers/services/examples/http-nginx.yml
+++ b/docs/controllers/services/examples/http-nginx.yml
@@ -8,7 +8,8 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: nginx-example
+    matchLabels:
+      app: nginx-example
   ports:
     - name: http
       protocol: TCP
