--- a/docs/controllers/services/examples/https-with-pass-through-nginx.yml
+++ b/docs/controllers/services/examples/https-with-pass-through-nginx.yml
@@ -10,7 +10,8 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: nginx-example
+    matchLabels:
+      app: nginx-example
   ports:
     - name: http
       protocol: TCP
