--- a/docs/controllers/services/examples/tcp-nginx.yml
+++ b/docs/controllers/services/examples/tcp-nginx.yml
@@ -6,7 +6,8 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: nginx-example
+    matchLabels:
+      app: nginx-example
   ports:
     - name: http
       protocol: TCP
