--- a/releases/v0.1.21.yml
+++ b/releases/v0.1.21.yml
@@ -7,6 +7,9 @@ metadata:
 spec:
   replicas: 1
   revisionHistoryLimit: 2
+  selector:
+    matchLabels:
+      app: digitalocean-cloud-controller-manager
   template:
     metadata:
       labels:
