--- a/releases/v0.1.25.yml
+++ b/releases/v0.1.25.yml
@@ -62,6 +62,22 @@ metadata:
     rbac.authorization.kubernetes.io/autoupdate: "true"
   name: system:cloud-controller-manager
 rules:
+# The following is necessary to support leader election when running DO-CCM on
+# a multi-master cluster. We leave it commented out on the assumption that the
+# typical user is not running a multi-master cluster and therefore does not
+# need the additional persmissions.
+#
+# - apiGroups:
+#   - coordination.k8s.io
+#   resources:
+#   - leases
+#   verbs:
+#   - get
+#   - watch
+#   - list
+#   - create
+#   - update
+#   - delete
 - apiGroups:
   - ""
   resources:
