--- a/releases/v0.1.35.yml
+++ b/releases/v0.1.35.yml
@@ -1,66 +1,47 @@
 ---
-apiVersion: v1
-kind: Secret
-metadata:
-  name: digitalocean
-  namespace: kube-system
-stringData:
-  # insert your DO access token here
-  access-token: {{ DO_TOKEN }}
-
----
 apiVersion: apps/v1
-kind: DaemonSet
+kind: Deployment
 metadata:
   name: digitalocean-cloud-controller-manager
   namespace: kube-system
 spec:
+  replicas: 1
+  revisionHistoryLimit: 2
   selector:
     matchLabels:
-      k8s-app: digitalocean-cloud-controller-manager
+      app: digitalocean-cloud-controller-manager
   template:
     metadata:
       labels:
-        k8s-app: digitalocean-cloud-controller-manager
+        app: digitalocean-cloud-controller-manager
       annotations:
         scheduler.alpha.kubernetes.io/critical-pod: ''
     spec:
-      nodeSelector:
-        node-role.kubernetes.io/master: ""
-      serviceAccountName: cloud-controller-manager
       dnsPolicy: Default
       hostNetwork: true
+      serviceAccountName: cloud-controller-manager
       tolerations:
+        # this taint is set by all kubelets running `--cloud-provider=external`
+        # so we should tolerate it to schedule the digitalocean ccm
         - key: "node.cloudprovider.kubernetes.io/uninitialized"
           value: "true"
           effect: "NoSchedule"
         - key: "CriticalAddonsOnly"
           operator: "Exists"
+        # cloud controller manages should be able to run on masters
         - key: "node-role.kubernetes.io/master"
           effect: NoSchedule
-        - effect: NoExecute
-          key: node.kubernetes.io/not-ready
-          operator: Exists
-          tolerationSeconds: 300
-        - effect: NoExecute
-          key: node.kubernetes.io/unreachable
-          operator: Exists
-          tolerationSeconds: 300
       containers:
       - image: digitalocean/digitalocean-cloud-controller-manager:v0.1.35
         name: digitalocean-cloud-controller-manager
         command:
           - "/bin/digitalocean-cloud-controller-manager"
-          - "--leader-elect=true"
+          - "--leader-elect=false"
         resources:
           requests:
             cpu: 100m
             memory: 50Mi
         env:
-          - name: KUBERNETES_SERVICE_HOST
-            value: "127.0.0.1"
-          - name: KUBERNETES_SERVICE_PORT
-            value: "443"
           - name: DO_ACCESS_TOKEN
             valueFrom:
               secretKeyRef:
@@ -81,6 +62,22 @@ metadata:
     rbac.authorization.kubernetes.io/autoupdate: "true"
   name: system:cloud-controller-manager
 rules:
+# The following is necessary to support leader election when running DO-CCM on
+# a multi-master cluster. We leave it commented out on the assumption that the
+# typical user is not running a multi-master cluster and therefore does not
+# need the additional permissions.
+#
+# - apiGroups:
+#   - coordination.k8s.io
+#   resources:
+#   - leases
+#   verbs:
+#   - get
+#   - watch
+#   - list
+#   - create
+#   - update
+#   - delete
 - apiGroups:
   - ""
   resources:
@@ -125,6 +122,15 @@ rules:
   - serviceaccounts
   verbs:
   - create
+- apiGroups:
+  - ""
+  resources:
+  - persistentvolumes
+  verbs:
+  - get
+  - list
+  - update
+  - watch
 - apiGroups:
   - ""
   resources:
