--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,12 @@ jobs:
         uses: actions/setup-go@0caeaed6fd66a828038c2da3c0f662a42862658f
         with:
           go-version: ^1.17
+
       - name: Check out code into the Go module directory
         uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
+
+      - name: Verify docker image builds
+        run: make build
+
       - name: Run test command
         run: make ci
