--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,9 +17,28 @@ jobs:
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+        with:
+          fetch-depth: 1
 
       - name: Verify docker image builds
         run: make build
 
       - name: Run test command
         run: make ci
+
+  release-dev-image:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: checkout
+        uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+        with:
+          fetch-depth: 1
+
+      - name: Login to dockerhub to push the image
+        run: echo "${{ secrets.DockerHubToken }}" | docker login --username ${DOCKER_USER} --password-stdin
+        env:
+          DOCKER_USER: ${{ secrets.DockerHubUser }}
+      - name: build and push new CCM dev image
+        run: |
+          VERSION=dev make publish
