--- a/releases/dev.yml
+++ b/releases/dev.yml
@@ -35,7 +35,7 @@ spec:
         - key: "node-role.kubernetes.io/control-plane"
           effect: NoSchedule
       containers:
-      - image: digitalocean/digitalocean-cloud-controller-manager:v0.1.36
+      - image: digitalocean/digitalocean-cloud-controller-manager:dev
         name: digitalocean-cloud-controller-manager
         command:
           - "/bin/digitalocean-cloud-controller-manager"
