--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Publish Docker Image
         env:
           VERSION: ${{ github.event.inputs.tag }}
-        run: make publish
+        run: make ci publish
       - name: run make bump-version
         run: make bump-version
         env:
