--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,14 @@ jobs:
 
   release-dev-image:
     runs-on: ubuntu-latest
+    needs: test
     if: github.ref == 'refs/heads/master'
     steps:
+      - name: Install go
+        uses: actions/setup-go@0caeaed6fd66a828038c2da3c0f662a42862658f
+        with:
+          go-version: ^1.17
+
       - name: checkout
         uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
         with:
