--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,15 +10,14 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Install go
-        uses: actions/setup-go@0caeaed6fd66a828038c2da3c0f662a42862658f
-        with:
-          go-version: ^1.17
-
       - name: Check out code into the Go module directory
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
         with:
           fetch-depth: 1
+      - name: Install go
+        uses: actions/setup-go@0caeaed6fd66a828038c2da3c0f662a42862658f
+        with:
+          go-version-file: go.mod
 
       - name: Verify docker image builds
         run: make build
