update unit test and docs
Signed-off-by: Sachin Tiptur <sachin@kubermatic.com>

--- a/docs/example-manifests/cloud-controller-manager.yml
+++ b/docs/example-manifests/cloud-controller-manager.yml
@@ -66,6 +66,8 @@ spec:
               secretKeyRef:
                 name: digitalocean
                 key: access-token
+          - name: DO_IP_ADDR_FAMILIES
+            value: ipv4,ipv6
 
 ---
 apiVersion: v1
