--- a/docs/controllers/services/examples/http-nginx-with-load-balancer-firewall.yml
+++ b/docs/controllers/services/examples/http-nginx-with-load-balancer-firewall.yml
@@ -15,6 +15,8 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 80
+  loadBalancerSourceRanges:
+  - 1.3.0.0/16
 
 ---
 apiVersion: apps/v1
