webhook validation logic
add license headers

gofmt

remove unkeyed fields

rename user agent and log lines to specify webhook function

surface errors where admission denied

correct decode error message

run tests in parallel

refactor test client

admission deny happy path

correct surfaced error message on denial

add disclaimer about state of webhook server

 force the build process to use the vendor folder only for dependency resolution

copy entire workspace directory

return DO client error

return errors if env variables are missing

update to DOClient for consistency

validate status code to return admission denial or error

require droplet tag for server

remove tags and associate update with created lb

formatting nit

gofmt main

copy ccm folder

remove JIRA reference

remove CLuster ID and droplet tag env

remove dropletTag variable

check if region env variable is set, if not retrieve region from metadata

Fix and improve Dockerfile

Simplify Dockerfile by copying the entire directory

There is little value in targeting specific sub-directories since we
have a multi-stage build that eventually only keeps the target binary in
the runtime image.

Rename binary

improve client error readability

remove region env fetch

create constant for lb ID annotation

validate if godo response is nit and handle accordingly

error if godo response is nil

fixed tests

--- a/cloud-controller-manager/cmd/digitalocean-webhook-server/Dockerfile
+++ b/cloud-controller-manager/cmd/digitalocean-webhook-server/Dockerfile
@@ -12,32 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Build the manager binary
+# Build the binary
 FROM golang:1.19 as builder
 
-WORKDIR /workspace
+WORKDIR /usr/src/app
 
-# Copy the Go Modules manifests
-COPY go.mod go.mod
-COPY go.sum go.sum
-# cache deps before building and copying source so that we don't need to re-download as much
-# and so that source changes don't invalidate our downloaded layer
-COPY vendor/ vendor/
+COPY . ./
 
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -mod=vendor -a -o /digitalocean-webhook-server ./cloud-controller-manager/cmd/digitalocean-webhook-server/...
 
-# Copy the go source
-COPY  cloud-controller-manager/cmd/digitalocean-webhook-server/main.go main.go
-COPY  cloud-controller-manager/do cloud-controller-manager/do
-
-
-# Build
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GO111MODULE=on go build -v -a -o doks_webhooks main.go
-
-# Use distroless as minimal base image to package the manager binary
-# Refer to https://github.com/GoogleContainerTools/distroless for more details
+# Use distroless as minimal base image to package the binary
 FROM gcr.io/distroless/static:nonroot
-WORKDIR /
-COPY --from=builder  /workspace/doks_webhooks /doks_webhooks
-USER 65532:65532
+COPY --from=builder /digitalocean-webhook-server /digitalocean-webhook-server
 
-ENTRYPOINT ["./doks_webhooks"]
+ENTRYPOINT ["/digitalocean-webhook-server"]
+
