--- a/charts/digitalocean-cloud-controller-manager/templates/system:cloud-controller-manager.clusterrolebinding.yaml
+++ b/charts/digitalocean-cloud-controller-manager/templates/system:cloud-controller-manager.clusterrolebinding.yaml
@@ -10,4 +10,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: cloud-controller-manager
-    namespace: kube-system
+    namespace: {{ .Release.Namespace }}
