--- a/charts/digitalocean-cloud-controller-manager/templates/cloud-controller-manager.serviceaccount.yaml
+++ b/charts/digitalocean-cloud-controller-manager/templates/cloud-controller-manager.serviceaccount.yaml
@@ -3,4 +3,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: cloud-controller-manager
-  namespace: kube-system
+  namespace: {{ .Release.Namespace }}
