--- a/docs/example-manifests/kube-controller-manager.yml
+++ b/docs/example-manifests/kube-controller-manager.yml
@@ -20,7 +20,7 @@ spec:
       --configure-cloud-routes=false --kubeconfig=/var/lib/kube-controller-manager/kubeconfig
       --leader-elect=true --root-ca-file=/srv/kubernetes/ca.crt --service-account-private-key-file=/srv/kubernetes/server.key
       --use-service-account-credentials=true --v=2 > /tmp/pipe 2>&1
-    image: k8s.gcr.io/kube-controller-manager:v1.11.1
+    image: registry.k8s.io/kube-controller-manager:v1.11.1
     livenessProbe:
       httpGet:
         host: 127.0.0.1
