--- a/docs/example-manifests/kube-scheduler.yml
+++ b/docs/example-manifests/kube-scheduler.yml
@@ -16,7 +16,7 @@ spec:
     - mkfifo /tmp/pipe; (tee -a /var/log/kube-scheduler.log < /tmp/pipe & ) ; exec
       /usr/local/bin/kube-scheduler --kubeconfig=/var/lib/kube-scheduler/kubeconfig
       --leader-elect=true --v=2 > /tmp/pipe 2>&1
-    image: k8s.gcr.io/kube-scheduler:v1.10.3
+    image: registry.k8s.io/kube-scheduler:v1.10.3
     livenessProbe:
       httpGet:
         host: 127.0.0.1
